# wasm-api

./: Cargo.toml  README.md  index.html
docs/: README.md  index.html
docs/css/: style.css
docs/pkg/: package.json  prueba_05.d.ts  prueba_05.js  prueba_05_bg.wasm  prueba_05_bg.wasm.d.ts
pkg/: prueba_05.d.ts  prueba_05.js  prueba_05_bg.wasm  prueba_05_bg.wasm.d.ts
src/: lib.rs
