[package]
name = "prueba-05"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ['Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'Document', 'HtmlElement'] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.68"
serde_derive = "1.0"


[lib]
crate-type = ["cdylib"]